--- a/kubernetes/ClusterIssuer.yaml
+++ b/kubernetes/ClusterIssuer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: praduman.cnd@gmail.com
+    email: vivekbujji143@gmail.com
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
